--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="app_name">BabyWatch</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
+    <string name="frequency">Frequency</string>
+    <string name="duration">Duration</string>
+    <string name="title_record">Record</string>
 
-    <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="hello_world">Hello world!</string>
