--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="title_overview">Overview</string>
     <string name="title_duration">Duration</string>
     <string name="title_frequency">Frequency</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_email">Email</string>
 
 </resources>
